<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_text">EditTextActivity</string>
    <string name="button_change">Change</string>
    <string name="text">Text</string>
    <string name="Ok">Ok</string>
    <string name="Login">Login</string>
    <string name="CreateUser">Create User</string>
    <string name="User">User</string>
    <string name="Pass">Password</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="TUser">Type User</string>
    <string name="TPass">Type Password</string>
    <string name="Cancel">Cancel</string>
    <string name="Create">Create</string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="title_activity_main_test">MainTestActivity</string>
    <string name="title_activity_login_test">LoginTestActivity</string>
    <string name="title_activity_vk">VkActivity</string>
    <string name="title_activity_list_view_example">ListViewExampleActivity</string>
    <string name="title_activity_details">DetailsActivity</string>

</resources>
